# ftc

./: LICENSE  README.md  pyproject.toml
ftc/: db.sqlite3
ftc/ftc/: settings.py
ftc/judging/: models.py
ftc/judging/migrations/: 0001_initial.py
