[tool.poetry]
name = "ftc"
version = "0.1.0"
description = ""
authors = ["Alyza Tüchler <awt2124@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
Django = "^4.1.7"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
